testproj/src/objects/ArchivalDetail__c.object
<CustomObject>
    <description>This object is to store deails of all caese files archived and their status</description>
    <fields>
        <fullName>ACKReceived__c</fullName>
        <label>ACKReceived</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseName__c</fullName>
        <label>CaseName</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorReason__c</fullName>
        <label>ErrorReason</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtractionDate__c</fullName>
        <label>ExtractionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FileCategory__c</fullName>
        <label>FileCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileSize__c</fullName>
        <label>FileSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FileStatus__c</fullName>
        <label>FileStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <description>This is to make case name with attachment name unique</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>ArchivalDetail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>FileName__c</columns>
        <columns>FileStatus__c</columns>
        <columns>CaseName__c</columns>
        <columns>ACKReceived__c</columns>
        <columns>UniqueId__c</columns>
        <columns>FileCategory__c</columns>
        <columns>ErrorReason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ArchivalDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ArchivalDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>